--- a/Wearable/src/main/AndroidManifest.xml
+++ b/Wearable/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/launcher_icon"
         android:label="@string/app_name">
         <meta-data
             android:name="com.google.android.wearable.standalone"
@@ -44,119 +44,120 @@
             android:name="com.google.android.wearable"
             android:required="false"/>
 
-        <service
-            android:name=".watchface.OpenGLWatchFaceService"
-            android:label="@string/opengl_name"
-            android:permission="android.permission.BIND_WALLPAPER">
-            <meta-data
-                android:name="android.service.wallpaper"
-                android:resource="@xml/watch_face"/>
-            <meta-data
-                android:name="com.google.android.wearable.watchface.preview"
-                android:resource="@drawable/preview_opengl"/>
-            <meta-data
-                android:name="com.google.android.wearable.watchface.preview_circular"
-                android:resource="@drawable/preview_opengl_circular"/>
-            <meta-data
-                android:name="com.google.android.wearable.watchface.companionConfigurationAction"
-                android:value="com.example.android.wearable.watchface.CONFIG_OPENGL"/>
-
-            <intent-filter>
-                <action android:name="android.service.wallpaper.WallpaperService"/>
-
-                <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE"/>
-            </intent-filter>
-        </service>
-        <service
-            android:name=".watchface.AnalogComplicationWatchFaceService"
-            android:enabled="true"
-            android:label="@string/analog_complication"
-            android:permission="android.permission.BIND_WALLPAPER">
-            <meta-data
-                android:name="android.service.wallpaper"
-                android:resource="@xml/watch_face"/>
-            <meta-data
-                android:name="com.google.android.wearable.watchface.preview"
-                android:resource="@drawable/preview_analog_complication"/>
-            <meta-data
-                android:name="com.google.android.wearable.watchface.preview_circular"
-                android:resource="@drawable/preview_analog_complication_circular"/>
-            <meta-data
-                android:name="com.google.android.wearable.watchface.wearableConfigurationAction"
-                android:value="com.example.android.wearable.watchface.CONFIG_COMPLICATION_SIMPLE"/>
-
-            <intent-filter>
-                <action android:name="android.service.wallpaper.WallpaperService"/>
-
-                <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE"/>
-            </intent-filter>
-        </service>
-
-        <activity android:name="android.support.wearable.complications.ComplicationHelperActivity"/>
-        <activity
-            android:name=".config.AnalogComplicationConfigActivity"
-            android:label="@string/analog_complication_config">
-            <intent-filter>
-                <action android:name="com.example.android.wearable.watchface.CONFIG_COMPLICATION_SIMPLE"/>
-
-                <category android:name="com.google.android.wearable.watchface.category.WEARABLE_CONFIGURATION"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-            </intent-filter>
-        </activity>
-
-        <service
-            android:name=".watchface.InteractiveWatchFaceService"
-            android:label="@string/interactive_name"
-            android:permission="android.permission.BIND_WALLPAPER">
-            <meta-data
-                android:name="android.service.wallpaper"
-                android:resource="@xml/watch_face"/>
-            <meta-data
-                android:name="com.google.android.wearable.watchface.preview"
-                android:resource="@drawable/preview_interactive"/>
-            <meta-data
-                android:name="com.google.android.wearable.watchface.preview_circular"
-                android:resource="@drawable/preview_interactive_circular"/>
-
-            <intent-filter>
-                <action android:name="android.service.wallpaper.WallpaperService"/>
-
-                <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE"/>
-            </intent-filter>
-        </service>
-
-        <service
-            android:name=".watchface.DigitalWatchFaceService"
-            android:label="@string/digital_name"
-            android:permission="android.permission.BIND_WALLPAPER">
-            <meta-data
-                android:name="android.service.wallpaper"
-                android:resource="@xml/watch_face"/>
-            <meta-data
-                android:name="com.google.android.wearable.watchface.preview"
-                android:resource="@drawable/preview_digital"/>
-            <meta-data
-                android:name="com.google.android.wearable.watchface.preview_circular"
-                android:resource="@drawable/preview_digital_circular"/>
-            <meta-data
-                android:name="com.google.android.wearable.watchface.companionConfigurationAction"
-                android:value="com.example.android.wearable.watchface.CONFIG_DIGITAL"/>
-            <meta-data
-                android:name="com.google.android.wearable.watchface.wearableConfigurationAction"
-                android:value="com.example.android.wearable.watchface.CONFIG_DIGITAL"/>
-
-            <intent-filter>
-                <action android:name="android.service.wallpaper.WallpaperService"/>
-
-                <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE"/>
-            </intent-filter>
-        </service>
-
         <!--
-             All intent-filters for config actions must include the categories
-            com.google.android.wearable.watchface.category.WEARABLE_CONFIGURATION
-            and android.intent.category.DEFAULT.
-        -->
+                <service
+                    android:name=".watchface.OpenGLWatchFaceService"
+                    android:label="@string/opengl_name"
+                    android:permission="android.permission.BIND_WALLPAPER">
+                    <meta-data
+                        android:name="android.service.wallpaper"
+                        android:resource="@xml/watch_face"/>
+                    <meta-data
+                        android:name="com.google.android.wearable.watchface.preview"
+                        android:resource="@drawable/preview_opengl"/>
+                    <meta-data
+                        android:name="com.google.android.wearable.watchface.preview_circular"
+                        android:resource="@drawable/preview_opengl_circular"/>
+                    <meta-data
+                        android:name="com.google.android.wearable.watchface.companionConfigurationAction"
+                        android:value="com.example.android.wearable.watchface.CONFIG_OPENGL"/>
+
+                    <intent-filter>
+                        <action android:name="android.service.wallpaper.WallpaperService"/>
+
+                        <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE"/>
+                    </intent-filter>
+                </service>
+                <service
+                    android:name=".watchface.AnalogComplicationWatchFaceService"
+                    android:enabled="true"
+                    android:label="@string/analog_complication"
+                    android:permission="android.permission.BIND_WALLPAPER">
+                    <meta-data
+                        android:name="android.service.wallpaper"
+                        android:resource="@xml/watch_face"/>
+                    <meta-data
+                        android:name="com.google.android.wearable.watchface.preview"
+                        android:resource="@drawable/preview_analog_complication"/>
+                    <meta-data
+                        android:name="com.google.android.wearable.watchface.preview_circular"
+                        android:resource="@drawable/preview_analog_complication_circular"/>
+                    <meta-data
+                        android:name="com.google.android.wearable.watchface.wearableConfigurationAction"
+                        android:value="com.example.android.wearable.watchface.CONFIG_COMPLICATION_SIMPLE"/>
+
+                    <intent-filter>
+                        <action android:name="android.service.wallpaper.WallpaperService"/>
+
+                        <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE"/>
+                    </intent-filter>
+                </service>
+
+                <activity android:name="android.support.wearable.complications.ComplicationHelperActivity"/>
+                <activity
+                    android:name=".config.AnalogComplicationConfigActivity"
+                    android:label="@string/analog_complication_config">
+                    <intent-filter>
+                        <action android:name="com.example.android.wearable.watchface.CONFIG_COMPLICATION_SIMPLE"/>
+
+                        <category android:name="com.google.android.wearable.watchface.category.WEARABLE_CONFIGURATION"/>
+                        <category android:name="android.intent.category.DEFAULT"/>
+                    </intent-filter>
+                </activity>
+
+                <service
+                    android:name=".watchface.InteractiveWatchFaceService"
+                    android:label="@string/interactive_name"
+                    android:permission="android.permission.BIND_WALLPAPER">
+                    <meta-data
+                        android:name="android.service.wallpaper"
+                        android:resource="@xml/watch_face"/>
+                    <meta-data
+                        android:name="com.google.android.wearable.watchface.preview"
+                        android:resource="@drawable/preview_interactive"/>
+                    <meta-data
+                        android:name="com.google.android.wearable.watchface.preview_circular"
+                        android:resource="@drawable/preview_interactive_circular"/>
+
+                    <intent-filter>
+                        <action android:name="android.service.wallpaper.WallpaperService"/>
+
+                        <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE"/>
+                    </intent-filter>
+                </service>
+-->
+                <service
+                    android:name=".watchface.DigitalWatchFaceService"
+                    android:label="@string/digital_name"
+                    android:permission="android.permission.BIND_WALLPAPER">
+                    <meta-data
+                        android:name="android.service.wallpaper"
+                        android:resource="@xml/watch_face"/>
+                    <meta-data
+                        android:name="com.google.android.wearable.watchface.preview"
+                        android:resource="@drawable/preview_digital"/>
+                    <meta-data
+                        android:name="com.google.android.wearable.watchface.preview_circular"
+                        android:resource="@drawable/preview_digital_circular"/>
+                    <meta-data
+                        android:name="com.google.android.wearable.watchface.companionConfigurationAction"
+                        android:value="com.example.android.wearable.watchface.CONFIG_DIGITAL"/>
+                    <meta-data
+                        android:name="com.google.android.wearable.watchface.wearableConfigurationAction"
+                        android:value="com.example.android.wearable.watchface.CONFIG_DIGITAL"/>
+
+                    <intent-filter>
+                        <action android:name="android.service.wallpaper.WallpaperService"/>
+
+                        <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE"/>
+                    </intent-filter>
+                </service>
+
+                <!--
+                     All intent-filters for config actions must include the categories
+                    com.google.android.wearable.watchface.category.WEARABLE_CONFIGURATION
+                    and android.intent.category.DEFAULT.
+                -->
 
         <activity
             android:name=".config.DigitalWatchFaceWearableConfigActivity"
